mysql.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql1-service
spec:
  ports:
    - port: 3306
      protocol: TCP
  selector:
    app: mysql1
