wordpress.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress1
  template:
    metadata:
      labels:
        app: wordpress1
    spec:
      containers:
        - name: wordpress1
          image: wordpress:5.8.3-php7.4-apache
          ports:
            - containerPort: 80
              name: wordpress1
          volumeMounts:
            - name: wordpress1-data
              mountPath: /var/www
      volumes:
        - name: wordpress1-data
          persistentVolumeClaim:
            claimName: wordpress1-volume
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: wordpress1-service
  name: wordpress1
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: wordpress1
