wp_mysql_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-mysql-ingress
spec:
  rules:
    - host: test.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wordpress1-service
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp2-mysql-ingress
spec:
  rules:
    - host: test1.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: wordpress2-service
                port:
                  number: 80
